--- a/src/HDShop.Web/appsettings.json
+++ b/src/HDShop.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44316"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=HDShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=.;Database=HDShop;User=sa;Password=asdf;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AuthServer": {
     "Authority": "https://localhost:44316"
@@ -14,5 +14,13 @@
         "ClientId": "HDShop_App"
       }
     }
+  },
+  "Settings": {
+    "Abp.Identity.Password.RequiredLength": "6",
+    "Abp.Identity.Password.RequireLowercase": "False",
+    "Abp.Identity.Password.RequireUppercase": "False",
+    "Abp.Identity.Password.RequireNonAlphanumeric": "False",
+    "Abp.Identity.Password.RequireDigit": "False",
+    "Abp.Identity.Password.RequiredUniqueChars": "1"
   }
 }
