--- a/src/HDShop.DbMigrator/appsettings.json
+++ b/src/HDShop.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=HDShop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=.;Database=HDShop;User=sa;Password=asdf;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
