--- a/src/HDShop.Domain/HDShop.Domain.csproj
+++ b/src/HDShop.Domain/HDShop.Domain.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="2.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Orders\" />
+    <Folder Include="Shops\" />
+  </ItemGroup>
+
 </Project>
