--- a/src/HDShop.Application.Contracts/HDShop.Application.Contracts.csproj
+++ b/src/HDShop.Application.Contracts/HDShop.Application.Contracts.csproj
@@ -12,11 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="2.2.1" />
-    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="2.2.1" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="2.2.1" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="2.2.1" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="2.2.1" />
+    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="2.3.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="IAPPServices\Orders\" />
   </ItemGroup>
 
 </Project>
