--- a/src/HDShop.Application/HDShop.Application.csproj
+++ b/src/HDShop.Application/HDShop.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="2.3.0" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="2.3.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="2.3.0" />
