--- a/src/HDShop.Application/HDShop.Application.csproj
+++ b/src/HDShop.Application/HDShop.Application.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>HDShop</RootNamespace>
   </PropertyGroup>
 
@@ -13,12 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
-    <PackageReference Include="Volo.Abp.Account.Application" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="2.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
