--- a/src/HDShop.DbMigrator/HDShop.DbMigrator.csproj
+++ b/src/HDShop.DbMigrator/HDShop.DbMigrator.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,14 +22,14 @@
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac" Version="2.5.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.0.0" />
     <ProjectReference Include="..\HDShop.Application.Contracts\HDShop.Application.Contracts.csproj" />
     <ProjectReference Include="..\HDShop.EntityFrameworkCore.DbMigrations\HDShop.EntityFrameworkCore.DbMigrations.csproj" />
   </ItemGroup>
