--- a/src/HDShop.HttpApi/HDShop.HttpApi.csproj
+++ b/src/HDShop.HttpApi/HDShop.HttpApi.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>HDShop</RootNamespace>
   </PropertyGroup>
 
@@ -12,11 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="2.5.0" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
