--- a/src/HDShop.Web/HDShop.Web.csproj
+++ b/src/HDShop.Web/HDShop.Web.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>HDShop.Web</RootNamespace>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -23,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="HDShopBrandingProvider.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Pages\**\*.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -32,12 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -47,14 +51,14 @@
     <ProjectReference Include="..\HDShop.Application\HDShop.Application.csproj" />
     <ProjectReference Include="..\HDShop.HttpApi\HDShop.HttpApi.csproj" />
     <ProjectReference Include="..\HDShop.EntityFrameworkCore.DbMigrations\HDShop.EntityFrameworkCore.DbMigrations.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="2.5.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="2.5.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="4.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
