--- a/test/HDShop.Web.Tests/HDShop.Web.Tests.csproj
+++ b/test/HDShop.Web.Tests/HDShop.Web.Tests.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <RootNamespace>HDShop</RootNamespace>
@@ -14,10 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <ProjectReference Include="..\HDShop.Application.Tests\HDShop.Application.Tests.csproj" />
     <ProjectReference Include="..\..\src\HDShop.Web\HDShop.Web.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="2.5.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
