--- a/src/HDShop.DbMigrator/appsettings.json
+++ b/src/HDShop.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=.;Database=HDShop;User=sa;Password=asdf;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=localhost;Port=3306;Database=HDShop;Uid=root;Pwd=BL20166.Com;"
   },
   "IdentityServer": {
     "Clients": {
