--- a/src/HDShop.EntityFrameworkCore.DbMigrations/HDShop.EntityFrameworkCore.DbMigrations.csproj
+++ b/src/HDShop.EntityFrameworkCore.DbMigrations/HDShop.EntityFrameworkCore.DbMigrations.csproj
@@ -16,6 +16,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
