--- a/src/HDShop.EntityFrameworkCore/HDShop.EntityFrameworkCore.csproj
+++ b/src/HDShop.EntityFrameworkCore/HDShop.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\HDShop.Domain\HDShop.Domain.csproj" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="4.0.0" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.0.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.0.0" />
     <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="4.0.0" />
